--- a/evals/registry/completion_fns/llama2_finetuned.yaml
+++ b/evals/registry/completion_fns/llama2_finetuned.yaml
@@ -4,8 +4,8 @@ llama2/finetuned/goatV9-chat-QLORA:
     model_id: abeiler/goatV9-chat-QLORA-Merged
     base_model: meta-llama/Llama-2-7b-chat-hf
 
-llama2/finetuned/goatV10-QLORA-GGUF:
+llama2/finetuned/goatV10-QLORA:
   class: evals.completion_fns.llama2_fine-tuned:LLaMA2FineTunedCompletionFn
   args:
-    model_id: /opt/ml/model/
-    base_model: meta-llama/Llama-2-7b-chat-hf
+    model_id: abeiler/goatV10-QLORA
+    base_model: meta-llama/Llama-2-7b-hf
