--- a/evals/registry/completion_fns/llama2_finetuned.yaml
+++ b/evals/registry/completion_fns/llama2_finetuned.yaml
@@ -9,3 +9,15 @@ llama2/finetuned/goatV10-QLORA:
   args:
     model_id: abeiler/goatV10-QLORA
     base_model: meta-llama/Llama-2-7b-hf
+
+llama2/finetuned/goatOrig-QLORA:
+  class: evals.completion_fns.llama2_fine-tuned:LLaMA2FineTunedCompletionFn
+  args:
+    model_id: abeiler/goatOrig-QLORA
+    base_model: meta-llama/Llama-2-7b-hf
+
+llama2/finetuned/goatOrig-QLORA:
+  class: evals.completion_fns.llama2_fine-tuned:LLaMA2FineTunedCompletionFn
+  args:
+    model_id: /content/gdrive/My Drive/Thesis/goatOrig-QLORA
+    base_model: /content/gdrive/My Drive/Thesis/goatOrig-QLORA
